# faer-amg

./: .gitignore  Cargo.toml
examples/: rand_svd_test.rs  simple_geometric.rs
examples/adaptive_amg/: main.rs
examples/aggregation/: anisotropy_partition.csv  main.rs  plot_partition.py
examples/amg/: main.rs
examples/data/anisotropy/: h3_p1.bdy  h3_p1.coords  h3_p1.mtx  h3_p1.rhs
src/: adaptivity.rs  core.rs  hierarchy.rs  lib.rs  main.rs  par_spmm.rs  par_spmv.rs  utils.rs
src/decompositions/: mod.rs  rand_svd.rs
src/interpolation/: mod.rs
src/partitioners/: mod.rs  modularity.rs  multilevel.rs
src/preconditioners/: block_smoothers.rs  coarse_solvers.rs  composite.rs  mod.rs  multigrid.rs  smoothers.rs
