[package]
name = "faer-amg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Adaptive smoothed aggregation algebraic multigrid preconditioner for numerical linear algebra applications"

[dependencies]
faer = "0.23"
faer-traits = { path = "../faer-rs/faer-traits", version = "0.22" }
log = "0.4.28"
matrix-market-rs = "0.1.3"
rand = "0.9.2"
rayon = "1.11.0"

[dev-dependencies]
# For aggregation example
env_logger = "0.11.8"
indicatif = "0.18.0"

[profile.dev]
codegen-units = 256
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
